Feature: changed homepage

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <![endif]-->
 <!-- Add your site or application content here -->
 <nav class="navbar navbar-expand-lg navbar-light bg-dark dropdown-content" id="navbar">
-    <a class="navbar-brand" href="index1.html">Icon Inserted</a>
+    <a class="navbar-brand" href="index.html">Icon Inserted</a>
     <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
             data-target="#navbarSupportedContent" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="index1.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="Teams.html">Teams <span class="sr-only">(current)</span></a>
