--- a/Team1.html
+++ b/Team1.html
@@ -35,7 +35,7 @@
 <!-- Add your site or application content here -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-dark " id="navbar">
-    <a class="navbar-brand" href="index1.html">Icon Inserted</a>
+    <a class="navbar-brand" href="index.html">Icon Inserted</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
