--- a/Teams.html
+++ b/Teams.html
@@ -35,7 +35,7 @@
 <!-- Add your site or application content here -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-dark " id="navbar">
-    <a class="navbar-brand" href="index1.html">Icon Inserted</a>
+    <a class="navbar-brand" href="index.html">Icon Inserted</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="index1.html">About <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">About <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="#">Teams <span class="sr-only">(current)</span></a>
